manifests/apps/adventofcode-app/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: adventofcode-app
  annotations:
    configmap.reloader.stakater.com/reload: frontend-config
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/kubeside/images/adventofcode@sha256:3453213d981d25e25343576c3501a9fd6ff81d5dd556355a9b8fe08f121cb1fd
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /var/www/html/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: frontend-config
            items:
              - key: config.json
                path: config.json
