manifests/apps/adventofcode-app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: adventofcode-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
