manifests/apps/adventofcode-app/frontend/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frontend
  namespace: adventofcode-app
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            io.kubernetes.pod.namespace: envoy-system
  egress:
    - {}
